# warp2api

./: .env.example  .gitignore  README.md  openai_compat.py  precompile_protos.py  pyproject.toml  server.py  warp2-vps.md
common/: __init__.py  config.py  http_utils.py  logging.py  message_codec.py  schema_utils.py  server_launcher.py
docs/: README_PRECOMPILE.md  log_optimization_guide.md  optimization_summary.md
proto/: attachment.proto  compiled_descriptors.pb  file_content.proto  input_context.proto  request.proto  response.proto  task.proto
protobuf2openai/: auth.py  bridge.py  config.py  logging.py  router.py  sse_transform.py
warp2protobuf/: warp2protobuf_architecture.md
warp2protobuf/api/: protobuf_routes.py
warp2protobuf/config/: models.py  settings.py
warp2protobuf/core/: auth.py  logging.py  protobuf.py  session.py  stream_processor.py
warp2protobuf/warp/: api_client.py  response.py
